--- a/client/src/components/styles/search.module.css
+++ b/client/src/components/styles/search.module.css
@@ -1,4 +1,13 @@
 .container{
+    display: flex;
+    flex-direction: column;
+}
+
+.text{
+    display: none;
+}
+
+.search_bar{
     margin-top: 30px;
     display: flex;
     height: 40px;
@@ -32,7 +41,11 @@
 }
 
 @media (min-width: 913px){
-    .container{
+    .text{
+        display: block;
+    }
+
+    .search_bar{
         margin-top: 0;
     }
     
