--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -2,13 +2,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid black;
     height: 35vh;
     padding: 30px;
     background-image: linear-gradient(0deg,
-            rgba(255, 255, 255, 0.582),
-            rgb(0, 0, 0));
+            rgba(255, 255, 255, 0.678),
+            var(--main-blue-color));
 }
+
+.actions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+}
+
 
 @media (min-width: 913px) {
     .container {
