--- a/client/src/components/styles/search.module.css
+++ b/client/src/components/styles/search.module.css
@@ -8,11 +8,11 @@
 }
 
 .search_bar{
-    margin-top: 30px;
     display: flex;
     height: 40px;
     border-radius: 16px;
     background-color: white;
+    border: 1px solid grey;
 }
 
 .img_container{
