--- a/client/src/components/styles/button.module.css
+++ b/client/src/components/styles/button.module.css
@@ -1,4 +1,5 @@
 .button{
+    position: absolute;
     width: 55px;
     height: 55px;
     border-radius: 100%;
@@ -9,9 +10,9 @@
     outline: none;
     border: 1px solid whitesmoke;
     background-color: none;
-    margin: 15px;
     box-shadow: 0px 0px 9px black;
     transition: 0.2s;
+    z-index: 2;
 }
 
 .button:hover{
