--- a/client/src/components/styles/card.module.css
+++ b/client/src/components/styles/card.module.css
@@ -1,99 +1,106 @@
-.container{
+.container {
     border: 1px solid black;
     display: flex;
-    width: 98%;
-    margin: 5px;
+    width: 100%;
+    margin: 5px 0px;
 }
 
-
-.img_container{
+.img_container {
+    background-image: url('../../media/entraña.jpg');
     background-position: center center;
     background-size: cover;
     width: 40%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
 }
 
-.img_container:hover{
-    background-size: 115%;
+.img_container:hover {
+    background-size: 110%;
     cursor: pointer;
 }
 
-.text{
+.text {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: baseline;
     padding: 10px;
     width: 60%;
 }
 
+.diets{
+    margin-bottom: 0;
+}
+
 .title{
-    margin: 0;
+    font-weight: 900;
+    margin-top: 0;
+    text-align: left;
 }
 
-.title:hover{
+.title:hover {
     cursor: pointer;
+    color: var(--main-blue-color);
 }
 
-@media (min-width: 763px){
-    .container{
+@media (min-width: 763px) {
+    .container {
         flex-direction: column;
         min-height: 320px;
         width: 230px;
     }
 
-    .img_container{
+    .img_container {
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
         height: 60%;
         width: 100%;
     }
-    
-    .text{
+
+    .text {
         padding: 10px;
         width: 100%;
         min-height: 40%;
     }
 
-    .title{
+    .title {
         font-size: 20px;
     }
 
-    .diets{
+    .diets {
         font-size: 14px;
     }
 }
 
-@media (min-width: 940px){
-    .container{
+@media (min-width: 940px) {
+    .container {
         min-height: 320px;
         width: 290px;
     }
-    .title{
+
+    .title {
         font-size: 25px;
         margin: 0;
     }
 }
 
 
-@media (min-width: 1250px){
-    .container{
+@media (min-width: 1250px) {
+    .container {
         height: 350px;
         width: 380px;
     }
 }
 
-@media (min-width: 1490px){
-    .container{
+@media (min-width: 1490px) {
+    .container {
         height: 380px;
         width: 420px;
         margin: 20px 5px;
     }
 
-    .text{
+    .text {
         padding: 0;
     }
 
-    .title{
+    .title {
         font-size: 25px;
         margin: 0;
     }
