--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -6,14 +6,18 @@
     padding: 30px;
     background-image: linear-gradient(0deg,
             rgba(255, 255, 255, 0.678),
-            var(--main-blue-color));
+            var(--main-pink-color));
 }
 
-.actions{
+.actions {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
+}
+
+.button {
+    margin-right: 70px;
+    margin-top: -55px;
 }
 
 
