--- a/client/src/paths/styles/landingp.module.css
+++ b/client/src/paths/styles/landingp.module.css
@@ -1,7 +1,3 @@
-.container{
-    display: flex;
-}
-
 .video {
     position: absolute;
     width: 100%;
@@ -22,6 +18,9 @@
     mix-blend-mode: overlay;
 }
 
+.container{
+    display: flex;
+}
 
 .jumbotron{
     position: relative;
@@ -35,36 +34,38 @@
 }
 
 .title{
+    padding: 0px 20px;
     font-family: 'Marck Script', cursive;    
     color: var(--main-white-color);
     font-size: 20vh;
     margin: 15px;
-    text-shadow: 0px 0px 10px black;
+    text-shadow: 0px 0px 10px black;    
 }
 
 .button{
-    width: 380px;
-    padding: 2px;
-    font-size: 33px;
-    font-weight: 900;
-    border-radius: 15px;
-    border: 9px double var(--main-white-color);
-    background-color: var(--main-traslucent-blue-color);
+    width: 390px;
+    padding: 5px;
+    font-size: 28px;
+    font-weight: 600;
+    border-radius: 20px;
+    border: 3px solid var(--main-white-color);
+    background-color: rgba(0, 0, 0, 0.555);
     color: var(--main-white-color);
     /* box-shadow: 0px 4px 5px black; */    
 }
 
 .button:hover{
     cursor: pointer;
-    background-color: rgb(50, 92, 126);
+    color: var(--main-blue-color);
+    border: 3px solid var(--main-blue-color);
 }
 
 .foot{
     margin-top: 50px;
     font-size: 24px;
     font-weight: 600;
-    color: var(--main-brown-color);
-    text-shadow: 0px 0px 3px grey;
+    color: var(--main-blue-color);
+    text-shadow: 0px 0px 5px black;
 }
 
 
