--- a/client/src/components/styles/card.module.css
+++ b/client/src/components/styles/card.module.css
@@ -3,10 +3,10 @@
     display: flex;
     width: 100%;
     margin: 5px 0px;
+    text-decoration: none;
 }
 
 .img_container {
-    background-image: url('../../media/entraña.jpg');
     background-position: center center;
     background-size: cover;
     width: 40%;
@@ -23,6 +23,7 @@
     align-items: baseline;
     padding: 10px;
     width: 60%;
+    text-align: left;
 }
 
 .diets{
@@ -32,7 +33,6 @@
 .title{
     font-weight: 900;
     margin-top: 0;
-    text-align: left;
 }
 
 .title:hover {
