--- a/client/src/components/styles/step.module.css
+++ b/client/src/components/styles/step.module.css
@@ -1,6 +1,7 @@
 .container{
     display: flex;
     margin: 10px 0px;
+    min-height: 100px;
 }
 
 .step_number{
@@ -17,6 +18,8 @@
     padding: 5px;
     text-align: left;
     font-size: 19px;
+    align-items: center;
+    justify-content: center;
 }
 
 .separator{
