--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -20,6 +20,26 @@
     margin-top: -55px;
 }
 
+.create{
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 10px;
+    width: 110px;
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--main-blue-color);
+    border-radius: 6px;
+    border: 3px solid var(--main-blue-color);
+    background-color: var(--main-white-color);
+}
+
+.create:hover{
+    cursor: pointer;
+    box-shadow: 0px 0px 3px black;
+}
+
 
 @media (min-width: 913px) {
     .container {
