--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -15,6 +15,17 @@
     align-items: center;
 }
 
+.options{
+    display: flex;
+    flex-direction: column;
+}
+
+.selects{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+
 .button {
     margin-right: 70px;
     margin-top: -55px;
@@ -22,22 +33,10 @@
 
 .create{
     padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin: 0px 10px;
     width: 110px;
     font-size: 20px;
     font-weight: 600;
-    color: var(--main-blue-color);
-    border-radius: 6px;
-    border: 3px solid var(--main-blue-color);
-    background-color: var(--main-white-color);
-}
-
-.create:hover{
-    cursor: pointer;
-    box-shadow: 0px 0px 3px black;
 }
 
 
