--- a/client/src/components/styles/pagination.module.css
+++ b/client/src/components/styles/pagination.module.css
@@ -4,30 +4,19 @@
 }
 
 .button{
-    display: flex;
-    align-items: center;
     font-size: 18px;
     margin: 3px;
     height: 27px;
-    border-radius: 6px;
-    border: 3px solid var(--main-blue-color);
-    background-color: transparent;
 }
 
 .number{
-    display: flex;
-    align-items: center;
     font-size: 20px;
     margin: 5px;
     height: 35px;
     padding: 3px 10px;
     border-radius: 4px;
-    border: 3px solid var(--main-blue-color);
-    background-color: transparent;
     box-shadow: 0px 0px 2px black;
 }
-
-.button:hover{
-    cursor: pointer;
-    box-shadow: 0px 0px 3px black;
+.number:hover{
+    cursor: auto;
 }
