--- a/client/src/paths/styles/submit.module.css
+++ b/client/src/paths/styles/submit.module.css
@@ -1,5 +1,11 @@
 .container{
     padding: 15px;
+    margin-top: -20px;
+}
+
+.parr{
+    font-size: 19px;
+    font-weight: 500;
 }
 
 .banner{
@@ -11,3 +17,16 @@
     margin: 40px 0px;
 }
 
+@media (min-width: 913px) {
+    .parr{
+        font-size: 22px;
+        width: 54%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .banner{
+        height: 45vh;
+    }
+}
