--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -11,7 +11,7 @@
     width: 100%;
     z-index: 100;
     padding: 10px;
-    background-color: var(--main-cyan-color);
+    background-color: #95cfb7;
 }
 
 .actions {
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--main-yellow-color);
+    background-color: #fff7bd;
     box-shadow: 0px 0px 19px black;
     padding: 10px;
 }
@@ -40,6 +40,7 @@
     color: var(--main-blue-color);
     padding: 5px 10px;
     background-color: rgb(255, 255, 255);
+    outline: 3px solid var(--main-red-color);
 }
 
 .check {
@@ -61,12 +62,14 @@
 
 .create {
     padding: 5px;
-    margin: 0px 10px;
-    width: 110px;
+    margin: 10px;
+    width: 300px;
     font-size: 20px;
     font-weight: 700;
-    background-color: var(--main-blue-color);
+    border: none;
+    background-color: var(--main-green-color);
     color: white;
+    box-shadow: 0px 0px 5px black;
 }
 
 
