--- a/client/src/paths/styles/home.module.css
+++ b/client/src/paths/styles/home.module.css
@@ -1,20 +1,3 @@
-.loading_cont{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 90px;
-    height: 70vh;
-}
-
-.loading{
-    width: 200px;
-    height: 200px;
-    background-image: url('../../media/loading.gif');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-
 .container{
     display: flex;
     flex-direction: column;
@@ -40,6 +23,7 @@
 
 @media (min-width: 913px) {
     .container{
+        margin: 30px;
         margin-top: 240px;
     }
 
@@ -47,11 +31,5 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
-    }
-}
-
-@media (min-width: 1400px) {
-    .cards {
-        padding: 0px 80px;
     }
 }
