--- a/client/src/paths/styles/landingp.module.css
+++ b/client/src/paths/styles/landingp.module.css
@@ -36,7 +36,7 @@
 .title{
     padding: 0px 20px;
     font-family: 'Marck Script', cursive;    
-    color: var(--main-white-color);
+    color: white;
     font-size: 20vh;
     margin: 15px;
     text-shadow: 0px 0px 10px black;    
@@ -48,9 +48,9 @@
     font-size: 28px;
     font-weight: 600;
     border-radius: 20px;
-    border: 3px solid var(--main-white-color);
+    border: 3px solid white;
     background-color: rgba(0, 0, 0, 0.555);
-    color: var(--main-white-color);
+    color: white
     /* box-shadow: 0px 4px 5px black; */    
 }
 
