--- a/client/src/components/styles/nav.module.css
+++ b/client/src/components/styles/nav.module.css
@@ -37,7 +37,7 @@
     border-radius: 6px;
     font-size: 19px;
     font-weight: 700;
-    color: var(--main-blue-color);
+    color: var(--main-red-color);
     padding: 5px 10px;
     background-color: rgb(255, 255, 255);
     outline: 3px solid var(--main-red-color);
